direnv: move installation of tools out .envrc
Actually maybe this workflow makes more sense:

* In case of first execution install all tools.
* In case .direnv was already created expect the setup was alrady done.
* Inform user how he can reinstall all tools

Maybe we could do this later:

* Autodetect if reinstallation needed based on some hash ...

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/README.adoc
+++ b/README.adoc
@@ -39,6 +39,25 @@ $ sudo dnf -y install direnv poetry
 $ direnv allow
 ....
 
+=== Reinstall
+
+In some cases you might want to reinstall all the tools including the Python virtual environment.
+
+. To reinstall the whole environment you can run:
++
+[source,shell]
+....
+$ make clean
+$ direnv allow
+....
++
+. To install only new python dependencies, use `poetry`
++
+[source,shell]
+....
+$ poetry install
+....
+
 === Usage
 
 Enter this directory and `direnv` should take care of everything.
