Support Testing Farm github runners
With the RHTAS (SecureSign) team we have a new use-case where they would
like to use Testing Farm solely as a infrastructure provider to their
Ansible Molecule tests. They do not want to add there `tmt` wrapping
around molecule to mitigate confusing the upstream folks who are used to
contributing directly to Ansible Molecule.

For this use case the team will be using our reservations which provide
the machine and then pass it over to molecule which will handle the test
execution.

For this to work we need a custom repository specific github runner for them,
which behaves as a testing farm worker and has access to the test
guests. We cannot make this work on generally available GitHub action
runners, because there is like thousands of them, and our security group
would not be able to cope with that list of rules due to limitations.

Also note that we are adjusting the guests security group to allow
all communication from workers to guests, this is needed so the github
runners can freely communicate with the guests without any restrictions.

See README.adoc for documentation for more information.

Resolves TFT-2722

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/README.adoc
+++ b/README.adoc
@@ -134,6 +134,53 @@ Details of the deployment:
 * the cluster name is `testing-farm-staging`
 * the Artemis API endpoint is `artemis.dev-mvadkert.testing-farm.io`
 
+== GitHub Environment
+
+We use this environment to manage various GitHub related infrastructure.
+
+=== GitHub Runners
+
+We optionally provide GitHub runners for the users using Testing Farm reservations for their testing workflows on GitHub.
+The runners are required to be able to easily provide access to Testing Farm provisioned guests directly from the runners.
+The runners IP addresses are injected to the production Artemis deployment because of this.
+The runners are looked up in AWS based on their tags.
+
+The configured runners can be found under `terragrunt/environments/github`.
+The structure of the directories follows the following naming scheme:
+
+[source,shell]
+----
+terragrunt/environments/github/<ORG>/runners/repositories/<REPOSITORY>
+----
+
+So for example for the `securesign` GitHub organization, the runner infrastructure code for the repository `artifact-signer-ansible` can be found under link:terragrunt/environments/github/securesign/runners/repositories/artifact-signer-ansible[].
+
+The other important directories and files are:
+
+* `terragrunt/environments/github/<ORG>/runners/components` - Contains additional components of the runners, e.g. the SSH key pair, the security group of the runner instance, etc.
+* `terragrunt/environments/github/<ORG>/runners/user_data.sh.tfpl` - A templated shell script run at the first boot, used to setup the runner, so it can function as needed.
+
+The state file is managed in Terraform Cloud.
+
+=== Adding a New Organization
+
+* Create a copy of link:`terragrunt/environments/github/<ORG>/runners` directory for the new organization.
+* Continue with <<Adding a New Repository>>.
+
+=== Adding a New Repository
+
+* Ask the responsible team to create a token which has https://docs.github.com/en/rest/actions/self-hosted-runners#create-a-registration-token-for-a-repository--fine-grained-access-tokens[permissions to retrieve runner registration tokens] for the specific repository.
+* Store the registration token in credentials file under the `credentials.github.<ORG>.runners.<REPOSITORY>.registration_token` key.
+* Create a copy of the link:`terragrunt/environments/github/<ORG>/runners/<REPOSITORY>` directory, or rename it if you added a new organization.
+* Adjust the `terragrunt.hcl` files if needed, e.g. you can adjust the instance type, disk size, etc. based on the user requirements,
+* Submit an MR with the changes.
+* The runner will be automatically provisioned and connected to the GitHub Actions if the MR is merged.
+
+=== Development and Testing
+
+You can use the `testing-farm` organization and `test-runner` for development and testing.
+The organization is not managed automatically, it is excluded from execution using link:terragrunt/environments/github/.terragrunt-excludes[] file.
+
 == Integration Tests
 
 === Worker integration tests
